--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@babel/preset-env": "^7.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "hast-util-to-html": "^4.0.1",
     "hastscript": "^4.1.0",
     "jest": "^23.6.0",
-    "react": "^16.6.0",
-    "rehype-react": "^3.0.3"
+    "rehype-stringify": "^4.0.0"
   },
   "license": "MIT",
   "main": "index.js",
