--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "@babel/preset-env": "^7.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "eslint": "^5.8.0",
     "hast-util-to-html": "^4.0.1",
     "hastscript": "^4.1.0",
     "jest": "^23.6.0",
+    "prettier": "^1.14.3",
     "rehype-stringify": "^4.0.0"
   },
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint '*.js'",
+    "prettier:fix": "prettier --write '*.js'",
+    "prettier:check": "prettier --list-different '*.js'"
   }
 }
