--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "Add CSS classes to Markdown using Rehype",
   "devDependencies": {
     "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.1.5",
+    "@babel/plugin-transform-react-jsx": "^7.0.0",
+    "@babel/preset-env": "^7.1.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "eslint": "^5.8.0",
-    "hast-util-to-html": "^4.0.1",
-    "hastscript": "^4.1.0",
+    "hast-util-to-html": "^5.0.0",
+    "hastscript": "^5.0.0",
     "jest": "^23.6.0",
-    "prettier": "^1.14.3",
+    "npm-run-all": "^4.1.3",
+    "prettier": "^1.15.1",
     "rehype-stringify": "^4.0.0"
   },
   "license": "MIT",
@@ -22,7 +24,7 @@
     "lint": "eslint '*.js'",
     "prettier:fix": "prettier --write '*.js'",
     "prettier:check": "prettier --list-different '*.js'",
-    "prepare": "npm run build",
+    "prepare": "run-s build",
     "build": "babel src -d lib",
     "watch": "babel src -d lib --watch --verboseo"
   },
