--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,12 @@
 {
   "semi": false,
-  "singleQuote": true
+  "singleQuote": true,
+  "overrides": [
+    {
+      "files": "*.test.js",
+      "options": {
+        "printWidth": 60
+      }
+    }
+  ]
 }
